--- a/style.css
+++ b/style.css
@@ -1,8 +1,76 @@
-body {
-  margin: 0;
-}
-
 main {
   width: 400vh;
 }
 
+body {
+  margin: 10;
+}
+
+header {
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333; 
+  background-image: url(imagebanner.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 10px 20px;
+}
+
+h4{
+margin: 10px;
+color: rgba(252, 252, 252, 0.537);
+display: inline-block;
+
+}
+
+span {
+  color: rgba(0, 0, 0, 0.564);
+}
+
+img {
+  max-height: 50px; 
+  margin: 0;
+
+}
+
+.navbar {
+  display: flex;
+
+}
+
+.navbar-item {
+  display: flex;
+  align-items: safe center ;
+  margin-right: 20px;
+}
+
+.white-box {  
+  position: absolute;
+  left: 70%;
+  
+  background-color: rgba(249, 249, 249, 0.5);
+  width: 140px;
+  height: fit-content;
+  padding: 4px;
+  text-align: center;
+  border-radius: 4px;
+  font-size: 14px;
+  color: black; 
+  margin: 1px;
+}
+
+.navbar-item img {
+  margin-right: 5px;
+}
+
+span {
+  display: contents;
+}
+
+.navbar-item:hover {
+  opacity: 0.8; 
+}
